main content fixed container size
- changed mainPage wrapper containers size to fixed one.
- vertically aligned to center main content
- added auto scrollbar on fixed size content

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-top: 2px dashed var(--blackColor);
 }
 
 footer form {
