--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -10,11 +10,7 @@ main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  border-bottom: 2px dashed var(--blackColor);
-}
-
-main>* {
-  margin: 4rem 0;
+  justify-content: center;
 }
 
 @media(max-width:1250px) {
