--- a/src/components/ProductsList/Product/Product.css
+++ b/src/components/ProductsList/Product/Product.css
@@ -7,6 +7,6 @@
 }
 
 .products_list .card {
-  width: 350px;
+  width: 330px;
   margin: 0.5rem 2rem;
 }
