--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -1,3 +1,15 @@
 #about p {
   font-size: 1.1rem;
 }
+
+.mainPage {
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  overflow-y: auto;
+  padding: 0 0.25rem;
+}
+
+.mainPage>* {
+  margin: 4rem 0;
+}
